--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ header .personal-text {
 }
 
 /* Hide all pop-ups when reset is checked */
-.index-page #popup-reset:checked ~ .popup {
+#popup-reset:checked ~ .popup {
     opacity: 0;
     visibility: hidden;
 }
