--- a/style.css
+++ b/style.css
@@ -510,7 +510,7 @@ img, a {
 
 /* Initially hide the video */
 .hidden {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
-
-
