--- a/style.css
+++ b/style.css
@@ -508,9 +508,17 @@ img, a {
     margin: 10px auto;
 }
 
-/* Initially hide the video */
+/* Avoid display: none; (prevents loading) */
 .hidden {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+/* When shown, make it fully visible */
+.popup input:checked ~ #popup-years-box video {
+    visibility: visible;
+    opacity: 1;
 }
 
 
